Squashed commit of the following:
commit 7080d6de006a18b719a21e04531b7711e2d6ba91
Author: Christian F <crystalpalace1977@googlemail.com>
Date:   Mon Dec 13 17:10:24 2021 +0100

    bump controlsfx version to latest

commit a99ec60776a80c7af38d22e28fcd797fd3d523ff
Author: Christian F <derreisende77@users.noreply.github.com>
Date:   Mon Dec 13 15:25:54 2021 +0100

    make list unmodifiable

commit 86b676835497db688c88cccf7d8029fcaa0bc2ce
Author: Christian F <derreisende77@users.noreply.github.com>
Date:   Mon Dec 13 13:30:44 2021 +0100

    bump version to 13.8.2

commit 6753195ac34dcddd57af5af10b55b36335670cce
Author: Christian F <derreisende77@users.noreply.github.com>
Date:   Mon Dec 13 12:17:20 2021 +0100

    - use copy constructor instead of unsafe clone()
    - rename DatenFilm functions


Former-commit-id: cf892da4adfc3e5548a3a7c311904d7962433335