@@ -98,7 +98,7 @@ public class ListeFilme extends ArrayList<DatenFilm> {
      * @return DatenFilm object if found or null
      */
     public synchronized DatenFilm getFilmByUrlAndSender(final String url, final String sender) {
-      return parallelStream().filter(f -> f.getUrl().equalsIgnoreCase(url) && f.getSender().equalsIgnoreCase(sender)).findAny().orElse(null);
+      return parallelStream().filter(f -> f.getUrlNormalQuality().equalsIgnoreCase(url) && f.getSender().equalsIgnoreCase(sender)).findAny().orElse(null);
     }
 
     public synchronized DatenFilm getFilmByUrl_klein_hoch_hd(String url) {
@@ -106,7 +106,7 @@ public class ListeFilme extends ArrayList<DatenFilm> {
         // wird versucht, einen Film mit einer kleinen/Hoher/HD-URL zu finden
         DatenFilm ret = null;
         for (DatenFilm f : this) {
-            if (f.getUrl().equals(url)) {
+            if (f.getUrlNormalQuality().equals(url)) {
                 ret = f;
                 break;
             } else if (f.getUrlFuerAufloesung(FilmResolution.Enum.HIGH_QUALITY).equals(url)) {
@@ -136,7 +136,7 @@ public class ListeFilme extends ArrayList<DatenFilm> {
     public void fillSenderList() {
         var writeLock = m_senderList.getReadWriteLock().writeLock();
 
-        var list = stream().map(DatenFilm::getSender).distinct().collect(Collectors.toList());
+        var list = stream().map(DatenFilm::getSender).distinct().toList();
         Platform.runLater(() -> {
             writeLock.lock();
             m_senderList.clear();
